calculator fully functional

--- a/2-javascript-project-solar-calculator-m2-exercise-files/startJS/index.html
+++ b/2-javascript-project-solar-calculator-m2-exercise-files/startJS/index.html
@@ -10,7 +10,11 @@
 <body>
 <h1>Learning JavaScript</h1>
 
+Wall to Wall <input id="across" type="number"><br>
 
+Height of Walls <input id="height" type="number"><br>
+
+<button onclick="materialsNeeded()">Calculate Materials</button>
 
 
 
